# shooter

./: .gitignore  .gitmodules  Bonus.cpp  Bonus.h  CMakeLists.txt  Client.cpp  Client.h  Gold_Ak47.h  Gun.cpp  Gun.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  README.md  Rifle.h  Server.cpp  Server.h  Shooter.cpp  Shooter.h  ShooterClient.cpp  ShooterClient.h  ShooterConsts.h  ShooterMsgType.cpp  ShooterMsgType.h  ShooterServer.cpp  ShooterServer.h  Shotgun.cpp  Shotgun.h  Source.cpp  Weapon.cpp  Weapon.h  connect.txt  main.cpp  shooter.sln  shooter.vcxproj  shooter.vcxproj.filters
SFML-VS32/doc/html/: classsf_1_1Joystick.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Texture.html  classsf_1_1VertexBuffer.html  deprecated.html
SFML-mingw32/doc/html/: index.html
engine/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Consts.h  Engine.cpp  Engine.h  Keyboard.cpp  Keyboard.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Point4D.cpp  Point4D.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  SoundController.cpp  SoundController.h  Triangle.cpp  Triangle.h  Vec2D.cpp  Vec2D.h  Vec3D.cpp  Vec3D.h  Vec4D.cpp  Vec4D.h  World.cpp  World.h
engine/animation/: AAttractToPoint.h  AColor.h  AFunction.h  ARotate.h  ARotateLeft.h  ARotateRelativePoint.h  AScale.h  AShowCreation.h  ATranslate.h  ATranslateToPoint.h  AWait.h  Animatable.cpp  Animatable.h  Animation.cpp  Animation.h  Animations.h  Interpolation.h  Timeline.cpp  Timeline.h
engine/gui/: Button.cpp  Button.h  Window.cpp  Window.h
engine/io/: Screen.cpp
engine/network/: ClientUDP.cpp  ClientUDP.h  MsgType.h  ReliableMsg.cpp  ReliableMsg.h  ServerUDP.cpp  ServerUDP.h  UDPConnection.cpp  UDPConnection.h  UDPSocket.cpp  UDPSocket.h  config.h
engine/physics/: HitBox.cpp  HitBox.h  RigidBody.cpp  RigidBody.h  Simplex.h  Solver.cpp  Solver.h
engine/utils/: CameraController.cpp  CameraController.h  Log.cpp  Log.h  Matrix4x4.cpp  Matrix4x4.h  Point4D.cpp  Point4D.h  Time.cpp  Time.h  Timer.cpp
maps/: materials.txt
network/: Chat.cpp  Chat.h  ShooterClient.cpp  ShooterClient.h  ShooterMsgType.cpp  ShooterMsgType.h  ShooterServer.cpp  ShooterServer.h
player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
weapon/: Ak47.cpp  Ak47.h  Gold_Ak47.h  Gun.cpp  Gun.h  Rifle.cpp  Rifle.h  Shotgun.cpp  Shotgun.h  Weapon.cpp  Weapon.h
